<resources>
    <string name="commit_3_0_18">1- Fix get box after show ads\n2 - Add scroll name quiz\n3 - Fix arena (checking for lives)\n4 - Fix update result quiz\n5 - Fix close userguide when click outside</string>
    <string-array name="nick_colors">
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Синий</item>
        <item>Желтый</item>
    </string-array>
    <string-array name="nick_color_spinner">
        <item>Красный</item>
        <item>Зеленый</item>
        <item>Синий</item>
        <item>Желтый</item>
    </string-array>
    <string name="arena_translate_title">Send to Arena</string>
    <string name="translate_negative">Cancel</string>
    <string name="send_to_arena_text">This quest will be made publicly available for all players after successful verification.</string>
    <string name="no_translated_quest_found">No Translated Quest Found</string>
    <string name="paid_attempt_title">Paid Attempt</string>
    <string name="paid_attempt_message">A fee is charged for fair play.</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_enough_lives">Not enough lives. %d%% life is spent on completing the quest.</string>
    <string name="userguide_chat_rules_title">Chat Rules:</string>
    <string name="userguide_chat_rules_text"> - Do not insult \n - Do not spam \n - Help</string>
    <string name="popup_menu_num_easy_questions">Number of Easy Questions: %1$d</string>
    <string name="popup_menu_num_hard_questions">Number of Hard Questions: %1$d</string>
    <string name="popup_menu_date_created">Date Created: %1$s</string>
    <string name="popup_menu_rating">Quest Rating: %1$d/%2$d</string>
    <string name="popup_menu_best_result">Your Best Result: %1$d/%2$d</string>
    <string name="popup_menu_average_result">Your Average Result: %1$d/%2$d</string>
    <string name="popup_menu_avg_all_players">Average Result of All Players: %1$d/%2$d</string>
    <string name="popup_menu_best_all_players">Best Result of All Players: %1$d/%2$d</string>
    <string name="popup_menu_quiz_version">Quest Version: %1$d</string>
    <string name="do_translate_massage">Translation in Progress</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_autorisation_language_title">Choose Languages</string>
    <string name="dialog_player_send_point_title">Send Data</string>
    <string name="dialog_player_send_point_massage">Message</string>
    <string name="dialog_player_send_point_trophy">Allocate Trophies</string>
    <string name="dialog_player_send_point_nolic">Allocate Zeroes</string>
    <string name="dialog_player_send_point_gold">Allocate Gold</string>
    <string name="dialog_player_send_point_skill">Allocate Experience</string>
    <string name="dialog_player_send_point_box">Allocate Boxes</string>
    <string name="network_description">Here lies the connection to the outside world, quests from other players, chat, tournaments, and much more.</string>
    <string name="network_title">Network</string>
    <string name="profile_data_error">Profile data error occurred, please wait (%1$d)</string>
    <string name="userguide_new_qualif_player_legend">You`ve earned the title - Legend</string>
    <string name="userguide_new_qualif_player_expert">You`ve earned the title - Expert</string>
    <string name="userguide_new_qualif_player_gransmaster">You`ve earned the title - Grandmaster</string>
    <string name="userguide_new_qualif_player_veteran">You`ve earned the title - Veteran</string>
    <string name="userguide_new_qualif_player_amateur">You`ve earned the title - Amateur</string>
    <string name="userguide_new_qualif_player_beginner">You`ve earned the title - Beginner</string>
    <string name="userguide_new_qualif_player_player">You`ve earned the title - Player</string>
    <string name="userguide_massage_add_gold">Gold added: %1$d things</string>
    <string name="userguide_massage_add_nolic">Zeroes added: %1$d things</string>
    <string name="userguide_massage_add_trophy">Trophies added: %1$d things</string>
    <string name="userguide_massage_add_skill">Experience added: %1$d things</string>
    <string name="userguide_title_add_points">Reward from Developers</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!!</string>
    <string name="incorrect_toast">Incorrect!!</string>
    <string name="null_toast">Null questions</string>
    <string name="load_front_list">Synchronized quiz</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="title_text">Quiz</string>
    <string name="menu_home_quiz">Home quizz</string>
    <string name="menu_user_quiz">My Quizz</string>
    <string name="menu_home_text">Home</string>
    <string name="menu_new">Shop</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title_name">Home</string>
    <string name="vandroid">vAndroid</string>
    <string name="name">Name…</string>
    <string name="question">Question…</string>
    <string name="new_question">Quiz name</string>
    <string name="end_button">END</string>
    <string name="hard_question">Hard question</string>
    <string name="hard_quiz">Hard quiz!</string>
    <string name="light_quiz">Light quiz!</string>
    <string name="unswer">Answer</string>
    <string name="light_question">Light question</string>
    <string name="clear">CLEAR</string>
    <string name="load_geo_quiz">Load GeoQuiz</string>
    <string name="load_сrime">Unfinished session loaded</string>
    <string name="go">Go!</string>
    <string name="error_load_question">Error load question</string>
    <string name="nice">Nice</string>
    <string name="no_nice">No nice</string>
    <string name="go_hard_question">Difficult questions are available to you</string>
    <string name="inter_ad_id">ca-app-pub-6279944059986833/5924755266</string>
    <string name="massage_show_ads">ads</string>
    <string name="time_format_key">time_format_key</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="load_api_question">Load api question</string>
    <string name="start_massage_1">Quiz – is a true–false quest, which initially has basic questions with the possibility of adding your own, answering which you earn points 1–100.</string>
    <string name="start_massage_2" formatted="false">After clicking on the name of the quest, you go to the stage of passing, which consists of 2 parts (easy questions and difficult ones). Initially, you go through easy questions, which can earn a maximum of 83.3% (2 stars), if you score 2 stars – for the next passage of the quest, you will answer difficult questions with which you can score 83.3 – 100% (2–3 stars)</string>
    <string name="start_massage_3">Quests can also be deleted - by clicking on the trash can, with a pop-up window with confirmation, as well as the ability not to delete the questions themselves from the database (We recommend checking the box - delete all questions)</string>
    <string name="start_massage_4">You can also share quests, with or without answers, depending on whether you check the box, difficult questions will be marked with a *. (Basic questions do not show answers if you share them)</string>
    <string name="start_massage_7">Near the button with the name of the quest there is an indicator that indicates the difficulty of the questions after pressing it, it can have 2 states, lite question / hard question. Below there are 3 numbers that show: number of easy questions / difficult / number of attempts to pass. Above the stars there are two indications: the left one is the average percentage for all attempts, the right one is best result. The stars show the best result. Date - this is the date the quest was created, the name of the best result is displayed above the date, if it was specified.</string>
    <string name="start_massage_5">When you try to create your own question, you will be prevented by a dialog box in which you must specify the name of the quest, then you indicate the question itself, the answer to it, the difficulty and the next button, and fill in the next question, etc. until you get bored, then press end. Note that end also writes a question.</string>
    <string name="timer">Has a complex logic, if an answered question is displayed when the application starts - the timer does not start, if you rewind questions and an unanswered question opens - the timer starts, with further rewinding of questions - the timer continues to count even if you are on an answered question,
until you answer any of the questions or the timer runs out. If the timer runs out - it answers the current question randomly, if you are on an answered question - it answers the last viewed unanswered question.

In general, the timer starts if you read an unanswered question.</string>
    <string name="start_massage_6">In the future, various school questions and new opportunities will be added. You can also share your questions in the review, the best questions will probably be added to the application. And also, you can support the author with a rating of 5, or remove ads, and you will have everything true ^)</string>
    <string name="FrontActivity_num_chack_norice">Remaining questions-days offline</string>
    <string name="list_question">A list of questions</string>
    <string name="dialog_text_delete">Delete text?</string>
    <string name="dialog_short_text_delete">delete</string>
    <string name="dialog_short_text_share">Share</string>
    <string name="dialog_text_share">Share text</string>
    <string name="action_sign_in_short">invitation</string>
    <string name="account_registration_language">Languages</string>
    <string name="action_registration">registration</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_city">Your city</string>
    <string name="login_mode">login</string>
    <string name="registration_mode">regestration</string>
    <string name="create_question_language">Language</string>
    <string name="create_question_dialog_chb_hard">Hard</string>
    <string name="nav_leaders">Leaders</string>
    <string name="nav_players">Players</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_massages">Messages</string>
    <string name="nav_reports">Reports</string>
    <string name="activity_cheat_answer">Answer</string>
    <string name="create_question_dialog_name_question">Name question</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Login</string>
    <string name="prompt_name">Your name</string>
    <string name="prompt_years">Your years (01.01.2001)</string>
    <string name="nav_home">Main quests</string>
    <string name="nav_my_quiz">My quests</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_chat">"Chat "</string>
    <string name="nav_enter">Login</string>
    <string name="nav_exit">"Logout "</string>
    <string name="nav_task">"Tasks "</string>
    <string name="nav_profile">"Profile "</string>
    <string name="nav_downloads">"Downloads "</string>
    <string name="nav_global">Arena</string>
    <string name="nav_news">"News "</string>
    <string name="add_language">Add Language</string>
    <string name="save_translation">Save Translation</string>
    <string name="translated_question_hint">Translation</string>
    <string name="source_question_hint">Quest Name</string>
</resources>