<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        android:divider="@drawable/menu_divider">

        <item
            android:id="@+id/nav_home"
            app:icon="@drawable/ic_home"
            android:divider="@drawable/menu_divider"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_my_quiz"
            app:icon="@drawable/nav_my_quiz"
            android:divider="@drawable/menu_divider"
            android:title="@string/nav_my_quiz" />

        <item
            android:id="@+id/nav_settings"
            app:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_chat"
            app:icon="@drawable/nav_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_enter"
            app:icon="@drawable/nav_add_acc"
            android:title="@string/nav_enter" />

        <item
            android:id="@+id/nav_exit"
            app:icon="@drawable/nav_exit"
            android:title="@string/nav_exit" />

        <item
            android:id="@+id/nav_task"
            app:icon="@drawable/nav_task"
            android:title="@string/nav_task" />

        <item
            android:id="@+id/nav_profile"
            app:icon="@drawable/nav_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_downloads"
            app:icon="@drawable/baseline_download_24"
            android:title="@string/nav_downloads" />

        <item
            android:id="@+id/nav_global"
            app:icon="@drawable/baseline_public_24"
            android:title="@string/nav_global" />

        <item
            android:id="@+id/nav_news"
            app:icon="@drawable/ic_new"
            android:title="@string/nav_news" />

        <item
            android:id="@+id/nav_leaders"
            app:icon="@drawable/nav_leader"
            android:title="@string/nav_leaders" />

        <item
            android:id="@+id/nav_players"
            app:icon="@drawable/nav_user"
            android:title="@string/nav_players" />


        <item
            android:id="@+id/nav_friends"
            app:icon="@drawable/ic_baseline_drive_folder_upload_24"
            android:title="@string/nav_friends" />

        <item
            android:id="@+id/nav_massages"
            app:icon="@drawable/nav_massage"
            android:title="@string/nav_massages" />
        <item
            android:id="@+id/nav_reports"
            app:icon="@drawable/nav_report"
            android:title="@string/nav_reports" />

    </group>
</menu>