<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_text"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/menu_new_quiz"
        android:icon="@drawable/ic_new"
        android:title="@string/menu_new"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/menu_info"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_info"
        app:showAsAction="ifRoom"
        />
</menu>