<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_main"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tpov.schoolquiz.presentation.question.CheatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_item_main_unable"
        android:padding="24dp"
        android:text="@string/warning_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/activity_cheat_answer"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="16dp"
        android:background="@drawable/back_item_main"
        android:text="@string/show_answer_button" />

</LinearLayout>

